--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "date-fns": "^2.28.0",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.2",
